Fix issue with unit test